# collection

./: .baw  CHANGELOG  Dockerfile  Makefile  README  build.xml  collection.xconf  expath-pkg.xml  pre-install.xql  pyproject.toml  repo.xml
.github/: dependabot.yml
.github/workflows/: docker.yml  release.yml  test.yml
data/bibl/: 1.xml  10.xml  100.xml  101.xml  102.xml  103.xml  104.xml  105.xml  106.xml  107.xml  108.xml  109.xml  11.xml  110.xml  111.xml  112.xml  113.xml  114.xml  115.xml  116.xml  117.xml  118.xml  119.xml  12.xml  120.xml  121.xml  122.xml  123.xml  124.xml  125.xml  126.xml  127.xml  128.xml  129.xml  13.xml  130.xml  131.xml  132.xml  133.xml  134.xml  (+290 more)
data/editors/: 1.xml  2.xml  3.xml
data/news/: 1.xml
data/persons/: 1.xml  10.xml  100.xml  101.xml  102.xml  103.xml  104.xml  105.xml  106.xml  107.xml  108.xml  109.xml  11.xml  110.xml  111.xml  112.xml  113.xml  114.xml  115.xml  116.xml  117.xml  118.xml  119.xml  12.xml  120.xml  121.xml  122.xml  123.xml  124.xml  125.xml  126.xml  127.xml  128.xml  129.xml  13.xml  130.xml  131.xml  132.xml  133.xml  134.xml  (+280 more)
docker/dev/: DOCKERFILE  make
docker/release/: DOCKERFILE  make
